api/swim_schema/src/schema/tests/derive/validated_form/all_items_unit.stderr
error: Attribute not supported by unit compound types
  --> $DIR/src/schema/tests/derive/validated_form/all_items_unit.rs:18:14
   |
18 |     #[derive(ValueSchema)]
   |              ^^^^^^^^^^^
